Got tests working woth maven sureFire